--- a/ghi/public/index.html
+++ b/ghi/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://www.fontspace.com/breaking-italic-c-font-f91567" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
